# Mimosa

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  app.py  docker-compose.yml  graphql_client.py  hardware.md  install.sh  pyproject.toml  requirements.txt  research.md  setup.cfg  setup.py  use-cases.md  user.py
GraphQL_client/: gql-config.yml  graphql_client.py  login_query.graphql  setup.py  switch_light_mutation.graphql  test_query.graphql
NeMo/: Dockerfile  Fastpitch_Training_GermanTTS.ipynb  Makefile  NeMo-CPU-asr.ipynb  setup.py
NeMo/asr/: speech_recognition.py
NeMo/src/: main.py  requirements.txt
NeMo/tests/: test_speech_recognition.py
NeMo/tts/: text_to_speech.py
RASA/: Makefile  __init__.py  config.yml  domain.py  domain.yml  endpoints.yml  intent.py  model_server.py  nlu_model.py  rasa-nlu.py  requirements.txt  setup.py  start_nlu.sh
docker/: Dockerfile.model_server  Dockerfile.nemo  Dockerfile.nemo_test  Dockerfile.rasa-nlu-server-build  Dockerfile.rasa_action_server  Dockerfile.rasa_model_server  Dockerfile.rasa_nlu_server  Dockerfile.rasa_nlu_train  Dockerfile.rasa_test  docker-compose.yml
docs/: docusaurus.config.js  package-lock.json  package.json
recording/: audio_settings.py  player.py  recorder.py
requirements/: api-requirements.txt  graphql-requirements.txt  nemo-requirements.txt  rasa-requirements.txt  requirements.txt
tests/: graphql_client_test.py  test_graphql_client.py  test_stories.yml
uml-diagrams/: sequence-diagram_enable-light.md  sequence-diagram_full.md  sequence-diagram_greeting.md
(+63 files in other folders)
