[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smart-home-voice-assistant"
version = "0.1.0"
description = "Smart Assistance Project for Home Interconnection Realization"
authors = ["'Tim Dilger' <tdilger@mailbox.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
setuptools = ">=41.0.0"
pytest = "^7.1.2"
PyYAML = "6.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.14.0"
pytest-xdist = "^2.2.1"
pytest = "^7.1.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.5.0"
toml = "^0.10.0"
pydoc-markdown = "^4.5.1"
mypy = "^0.971"
mypy-extensions = "^0.4.3"
bandit = "^1.6.3"